# ai-powered-slack-bot

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
backend/: app.py  wsgi.py
backend/resources/: auth.py  bot.py  home.py
backend/routes/: auth.py
backend/services/: bot_service.py  llm_service.py
backend/utils/: verify_slack_request.py
