[project]
name = "ai-powered-slack-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "welli7ngton",email = "welli7ngton.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "slack-sdk (>=3.34.0,<4.0.0)",
    "openai (>=1.60.0,<2.0.0)",
    "flask-restful (>=0.3.10,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "langchain (>=0.3.15,<0.4.0)",
    "langchain-openai (>=0.3.1,<0.4.0)",
    "langchain-community (>=0.3.15,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
